# swimming-chile

./: .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.json  requirements.txt
backend/api/: auth.py  database.py  main.py
backend/api/routers/: account.py  athletes.py  clubs.py  competitions.py  rankings.py  relays.py  stats.py
backend/data/reference/: athlete_accepted_homonyms.csv  club_alias.csv  (+1 more)
backend/docs/: CHANGELOG.md  ai_workflow.md  batch_runner_contract.md  fchmn_results_validation.md  parser_contracts.md  pre_load_checklist.md  schema.md  user_accounts_future.md
backend/natacion_chile/: relays.py
backend/scripts/: audit_expected_athlete_identity.py  curate_athlete_names.py  parse_results_pdf.py  prepare_athlete_canonical_updates.py  prepare_athlete_duplicate_merge_sql.py  prepare_nunoa_master_athlete_link_sql.py  preview_nunoa_master_athlete_links.py  run_pipeline_results.py  run_results_batch.py  scrape_fchmn.py  scrape_fechida.py
backend/sql/: schema.sql
backend/tests/: test_api_athlete_contracts.py  test_api_competitions_contracts.py  test_api_current_club_contract.py  test_api_rankings_stats_contracts.py  test_curate_athlete_names.py  test_parse_results_pdf.py  test_prepare_athlete_canonical_updates.py  test_prepare_athlete_duplicate_merge_sql.py  test_relays.py  test_run_pipeline_traceability.py  test_run_results_batch.py  test_scrape_fchmn.py  test_scrape_fechida.py  test_sql_traceability_contracts.py  test_user_accounts_contracts.py
(+76 files in other folders)
