[project]
name = "swimstats-chile-backend"
version = "0.1.0"
description = "Backend data platform for SwimStats Chile — PDF ingestion, validation, and FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0,<4",
    "pdfplumber>=0.11,<0.12",
    "openpyxl>=3.1,<4",
    "psycopg[binary]>=3.3,<4",
    "pytest>=9,<10",
    "fastapi>=0.110.0,<1",
    "uvicorn[standard]>=0.29.0,<1",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=6,<7",
    "ruff>=0.9,<1",
]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
